Corrected a typo in paper info

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C30] </div>
             <div style="display:inline" class="title">CLARA: a multifunctional virtual agent for conference support and touristic information.<div style="display:inline" class="link"><a href="http://www.uni-ulm.de/fileadmin/website_uni_ulm/allgemein/2015_iwsds/iwsds2015_submission_25.pdf">[PDF]</a></div></div>
-            <div class="author">Luis Fernando D??aro, <span>Seokhwan Kim</span>, Kheng Hui Yeo, Ridong Jiang, Andreea I. Niculescu, Rafael E. Banchs, Haizhou Li</div>
+            <div class="author">Luis Fernando D'Haro, <span>Seokhwan Kim</span>, Kheng Hui Yeo, Ridong Jiang, Andreea I. Niculescu, Rafael E. Banchs, Haizhou Li</div>
             <div class="book">Processing of the 6th International Workshop on Spoken Dialog System (<a href="http://www.uni-ulm.de/in/iwsds2015.html">IWSDS 2015</a>), Busan, Jan 2015. (Demo)</div>
           </div>
         </div>
