added footnote with 'last updated date'

--- a/index.html
+++ b/index.html
@@ -701,6 +701,7 @@
           </div>
         </div>
       </div>
+      <div id="footer">Last updated: 2015-09-30</div>
     </div>
   </body>
 </html>
