--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
             </div>
           </div>
         </div>
+        <div class="contact-item">
+          <div class="icon pull-left text-center">
+            <span class="fa fa-file-o fa-fw"></span>
+          </div>
+          <div class="description pull-right">
+            <a href="cv/seokhwan-cv.pdf">Click HERE to download my curriculum vitae.</a>
+          </div>
+        </div>
       </div>
       <div class="box">
         <h2>Research Interests</h2>
@@ -364,7 +372,7 @@
             <div style="display:inline" class="pid_conference">[C21] </div>
             <div style="display:inline" class="title">A Composite Kernel Approach for Dialog Topic Tracking with Structured Domain Knowledge from Wikipedia.<div style="display:inline" class="link"><a href="https://aclweb.org/anthology/P/P14/P14-2004.pdf">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclweb.org/anthology/P/P14/P14-2004.bib">[bib]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/acl2014-kim-poster">[poster]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Rafael E. Banchs, Haizhou Li</div>
-            <div class="book">Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (<a href="http://www.cs.jhu.edu/ACL2014/">ACL 2014</a>), Vol. 2, pp. 19-23, Baltimore, Jun 2014.<div style="display:inline" class="rate"> (25.0% acceptance)</div></div>
+            <div class="book">Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (<a href="http://www.cs.jhu.edu/ACL2014/">ACL 2014</a>), vol. 2, pp. 19-23, Baltimore, Jun 2014.<div style="display:inline" class="rate"> (25.0% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -442,7 +450,7 @@
             <div style="display:inline" class="pid_conference">[C14] </div>
             <div style="display:inline" class="title">A Meta Learning Approach to Grammatical Error Correction.<div style="display:inline" class="link"><a href="https://aclweb.org/anthology/P/P12/P12-2064.pdf">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclweb.org/anthology/P/P12/P12-2064.bib">[bib]</a></div></div>
             <div class="author">Hongsuck Seo, Jonghoon Lee, <span>Seokhwan Kim</span>, Kyusong Lee, Sechun Kang and Gary Geunbae Lee</div>
-            <div class="book">Proceedings of the 50th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2012.org/">ACL 2012</a>), Vol. 2, pp. 328-332, Jeju, Jul 2012.<div style="display:inline" class="rate"> (20.0% acceptance)</div></div>
+            <div class="book">Proceedings of the 50th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2012.org/">ACL 2012</a>), vol. 2, pp. 328-332, Jeju, Jul 2012.<div style="display:inline" class="rate"> (20.0% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -451,7 +459,7 @@
             <div style="display:inline" class="pid_conference">[C13] </div>
             <div style="display:inline" class="title">A Graph-based Cross-lingual Projection Approach for Weakly Supervised Relation Extraction.<div style="display:inline" class="link"><a href="https://aclweb.org/anthology/P/P12/P12-2010.pdf">[PDF]</a></div><div style="display:inline" class="link"><a href="https://aclweb.org/anthology/P/P12/P12-2010.bib">[bib]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/a-graphbased-crosslingual-projection-approach-for-weakly-supervised-relation-extraction">[slides]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Gary Geunbae Lee</div>
-            <div class="book">Proceedings of the 50th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2012.org/">ACL 2012</a>), Vol. 2, pp. 48-53, Jeju, Jul 2012.<div style="display:inline" class="rate"> (20.0% acceptance)</div></div>
+            <div class="book">Proceedings of the 50th Annual Meeting of the Association for Computational Linguistics (<a href="http://www.acl2012.org/">ACL 2012</a>), vol. 2, pp. 48-53, Jeju, Jul 2012.<div style="display:inline" class="rate"> (20.0% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
