--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Teaching Assistant</div>
-            <div class="year">2010 Spring</div>
+            <div class="year">Spring 2010</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
@@ -171,7 +171,7 @@
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Teaching Assistant</div>
-            <div class="year">2006 Spring</div>
+            <div class="year">Spring 2006</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
