--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">IEEE/ACM TASLP, IEEE ICASSP, Interspeech, IWSDS, ACM-SIGIR, IJCAI, IJCNLP, International Journal of Social Robotics</div>
+            <div class="where">ACM-SIGIR, IEEE ICASSP, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
@@ -709,7 +709,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2015-10-01</div>
+      <div id="footer">Last updated: 2015-10-06</div>
     </div>
   </body>
 </html>
