--- a/index.html
+++ b/index.html
@@ -229,6 +229,18 @@
         <h2>Publications</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2016</div>
+          </div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C37] </div>
+            <div style="display:inline" class="title">The Fourth Dialog State Tracking Challenge.</div>
+            <div class="author"><span>Seokhwan Kim</span>, Luis Fernando D'Haro, Rafael E. Banchs, Jason D. Williams, Matthew Henderson</div>
+            <div class="book">To appear in Proceedings of the 7th International
+Workshop on Spoken Dialogue Systems (<a href="http://www.uni-ulm.de/in/iwsds2016/workshop/introduction.html">IWSDS 2016</a>), vol. None, Saariselkä, Jan 2016.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2015</div>
           </div>
           <div class="col-xs-11">
