--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C37] </div>
-            <div style="display:inline" class="title">The Fourth Dialog State Tracking Challenge.</div>
+            <div style="display:inline" class="title">The Fourth Dialog State Tracking Challenge.<div style="display:inline" class="link"><a href="https://www.researchgate.net/publication/296223502_The_Fourth_Dialog_State_Tracking_Challenge">[PDF]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/the-fourth-dialog-state-tracking-challenge-dstc4">[slides]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Luis Fernando D'Haro, Rafael E. Banchs, Jason D. Williams, Matthew Henderson</div>
             <div class="book">Proceedings of the 7th International Workshop on Spoken Dialogue Systems (<a href="http://www.uni-ulm.de/in/iwsds2016/workshop/introduction.html">IWSDS 2016</a>), Saariselkä, Jan 2016.</div>
           </div>
