--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <h2>Research Interests</h2>
         <div class="interest">Natural Language Processing</div>
         <div class="interest">Spoken Dialogue Systems</div>
-        <div class="interest">Text mining</div>
-        <div class="interest">Information Retrieval</div>
+        <div class="interest">Natural Language Understanding</div>
+        <div class="interest">Text Mining</div>
       </div>
       <div class="box">
         <h2>Education</h2>
@@ -720,7 +720,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2016-03-31</div>
+      <div id="footer">Last updated: 2016-04-02</div>
     </div>
   </body>
 </html>
