--- a/index.html
+++ b/index.html
@@ -186,6 +186,17 @@
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Organizing Committee Co-chair</div>
+            <div class="year">2016</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="http://workshop.colips.org/dstc5/">The Fifth Dialog State Tracking Challenge (DSTC5)</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
+            <div class="profession">Organizing Committee Co-chair</div>
             <div class="year">2015</div>
           </div>
           <div class="col-xs-9">
@@ -720,7 +731,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2016-04-02</div>
+      <div id="footer">Last updated: 2016-04-05</div>
     </div>
   </body>
 </html>
