--- a/index.html
+++ b/index.html
@@ -243,6 +243,15 @@
             <div class="year">2016</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C38] </div>
+            <div style="display:inline" class="title">Exploring Convolutional and Recurrent Neural Networks in Sequential Labelling for Dialogue Topic Tracking.</div>
+            <div class="author"><span>Seokhwan Kim</span>, Rafael E. Banchs, Haizhou Li</div>
+            <div class="book">To appear in Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (<a href="http://acl2016.org/index.php">ACL 2016</a>), Berlin, Aug 2016.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C37] </div>
             <div style="display:inline" class="title">The Fourth Dialog State Tracking Challenge.<div style="display:inline" class="link"><a href="https://www.researchgate.net/publication/296223502_The_Fourth_Dialog_State_Tracking_Challenge">[PDF]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/the-fourth-dialog-state-tracking-challenge-dstc4">[slides]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Luis Fernando D'Haro, Rafael E. Banchs, Jason D. Williams, Matthew Henderson</div>
@@ -731,7 +740,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2016-04-05</div>
+      <div id="footer">Last updated: 2016-05-24</div>
     </div>
   </body>
 </html>
