--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <span class="fa fa-envelope fa-fw"></span>
               </div>
               <div class="description pull-right">
-                <img src="img/email_i2r.png" />
+                <img src="img/email_ieee.png" />
               </div>
             </div>
           </div>
@@ -221,7 +221,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">ACM-SIGIR, IEEE ICASSP, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
+            <div class="where">ACM-SIGIR, CSL, IEEE ICASSP, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
@@ -235,7 +235,7 @@
             <div style="display:inline" class="pid_conference">[C37] </div>
             <div style="display:inline" class="title">The Fourth Dialog State Tracking Challenge.</div>
             <div class="author"><span>Seokhwan Kim</span>, Luis Fernando D'Haro, Rafael E. Banchs, Jason D. Williams, Matthew Henderson</div>
-            <div class="book">To appear in Proceedings of the 7th International Workshop on Spoken Dialogue Systems (<a href="http://www.uni-ulm.de/in/iwsds2016/workshop/introduction.html">IWSDS 2016</a>), Saariselkä, Jan 2016.</div>
+            <div class="book">Proceedings of the 7th International Workshop on Spoken Dialogue Systems (<a href="http://www.uni-ulm.de/in/iwsds2016/workshop/introduction.html">IWSDS 2016</a>), Saariselkä, Jan 2016.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -246,7 +246,7 @@
             <div style="display:inline" class="pid_conference">[C36] </div>
             <div style="display:inline" class="title">A Robust Spoken Q&amp;A System with Scarce In-Domain Resources.</div>
             <div class="author">Luis Fernando D'Haro, <span>Seokhwan Kim</span>, Rafael E. Banchs</div>
-            <div class="book">To appear in Proceedings of the Asia-Pacific Signal and Information Processing Association Annual Summit and Conference 2015 (<a href="http://www.apsipa2015.org/">APSIPA ASC 2015</a>), Hong Kong, Dec 2015.</div>
+            <div class="book">Proceedings of the Asia-Pacific Signal and Information Processing Association Annual Summit and Conference 2015 (<a href="http://www.apsipa2015.org/">APSIPA ASC 2015</a>), Hong Kong, Dec 2015.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -255,7 +255,7 @@
             <div style="display:inline" class="pid_conference">[C35] </div>
             <div style="display:inline" class="title">Configuration of Dialogue Agent with Multiple Knowledge Sources.</div>
             <div class="author">Ridong Jiang, Rafael Banchs, <span>Seokhwan Kim</span>, Luis Fernando D'Haro, Andreea Niculescu, Kheng Hui Yeo</div>
-            <div class="book">To appear in Proceedings of the Asia-Pacific Signal and Information Processing Association Annual Summit and Conference 2015 (<a href="http://www.apsipa2015.org/">APSIPA ASC 2015</a>), Hong Kong, Dec 2015.</div>
+            <div class="book">Proceedings of the Asia-Pacific Signal and Information Processing Association Annual Summit and Conference 2015 (<a href="http://www.apsipa2015.org/">APSIPA ASC 2015</a>), Hong Kong, Dec 2015.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -720,7 +720,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2015-11-02</div>
+      <div id="footer">Last updated: 2016-07-07</div>
     </div>
   </body>
 </html>
