--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
         <h2>Research Interests</h2>
         <div class="interest">Natural Language Processing</div>
         <div class="interest">Spoken Dialogue Systems</div>
-        <div class="interest">Text mining</div>
-        <div class="interest">Information Retrieval</div>
+        <div class="interest">Natural Language Understanding</div>
+        <div class="interest">Text Mining</div>
       </div>
       <div class="box">
         <h2>Education</h2>
@@ -186,6 +186,17 @@
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Organizing Committee Co-chair</div>
+            <div class="year">2016</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="http://workshop.colips.org/dstc5/">The Fifth Dialog State Tracking Challenge (DSTC5)</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
+            <div class="profession">Organizing Committee Co-chair</div>
             <div class="year">2015</div>
           </div>
           <div class="col-xs-9">
@@ -221,7 +232,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">ACM-SIGIR, CSL, IEEE ICASSP, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
+            <div class="where">ACM-SIGIR, IEEE ICASSP, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
@@ -232,8 +243,17 @@
             <div class="year">2016</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C38] </div>
+            <div style="display:inline" class="title">Exploring Convolutional and Recurrent Neural Networks in Sequential Labelling for Dialogue Topic Tracking.</div>
+            <div class="author"><span>Seokhwan Kim</span>, Rafael E. Banchs, Haizhou Li</div>
+            <div class="book">To appear in Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (<a href="http://acl2016.org/index.php">ACL 2016</a>), Berlin, Aug 2016.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C37] </div>
-            <div style="display:inline" class="title">The Fourth Dialog State Tracking Challenge.</div>
+            <div style="display:inline" class="title">The Fourth Dialog State Tracking Challenge.<div style="display:inline" class="link"><a href="https://www.researchgate.net/publication/296223502_The_Fourth_Dialog_State_Tracking_Challenge">[PDF]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/the-fourth-dialog-state-tracking-challenge-dstc4">[slides]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Luis Fernando D'Haro, Rafael E. Banchs, Jason D. Williams, Matthew Henderson</div>
             <div class="book">Proceedings of the 7th International Workshop on Spoken Dialogue Systems (<a href="http://www.uni-ulm.de/in/iwsds2016/workshop/introduction.html">IWSDS 2016</a>), Saariselkä, Jan 2016.</div>
           </div>
