--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C38] </div>
-            <div style="display:inline" class="title">Exploring Convolutional and Recurrent Neural Networks in Sequential Labelling for Dialogue Topic Tracking.</div>
+            <div style="display:inline" class="title">Exploring Convolutional and Recurrent Neural Networks in Sequential Labelling for Dialogue Topic Tracking.<div style="display:inline" class="link"><a href="http://aclweb.org/anthology/P/P16/P16-1091.pdf">[PDF]</a></div><div style="display:inline" class="link"><a href="http://aclweb.org/anthology/P/P16/P16-1091.bib">[bib]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/exploring-convolutional-and-recurrent-neural-networks-in-sequential-labelling-for-dialogue-topic-tracking">[poster]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Rafael E. Banchs, Haizhou Li</div>
-            <div class="book">To appear in Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (<a href="http://acl2016.org/index.php">ACL 2016</a>), Berlin, Aug 2016.</div>
+            <div class="book">Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (<a href="http://acl2016.org/index.php">ACL 2016</a>), Berlin, Aug 2016.<div style="display:inline" class="rate"> (28.0% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -740,7 +740,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2016-07-07</div>
+      <div id="footer">Last updated: 2016-08-03</div>
     </div>
   </body>
 </html>
