--- a/index.html
+++ b/index.html
@@ -196,6 +196,15 @@
         </div>
         <div class="job clearfix">
           <div class="col-xs-3">
+            <div class="profession">Reviewer</div>
+            <div class="year">2016</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">IEEE SLT</div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
             <div class="profession">Organizing Committee Co-chair</div>
             <div class="year">2015</div>
           </div>
@@ -232,7 +241,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">ACM-SIGIR, IEEE ICASSP, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
+            <div class="where">ACM-SIGIR, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
