--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div style="display:inline" class="pid_conference">[C38] </div>
             <div style="display:inline" class="title">Exploring Convolutional and Recurrent Neural Networks in Sequential Labelling for Dialogue Topic Tracking.<div style="display:inline" class="link"><a href="http://aclweb.org/anthology/P/P16/P16-1091.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="http://aclweb.org/anthology/P/P16/P16-1091.bib" target="_blank">[bib]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/exploring-convolutional-and-recurrent-neural-networks-in-sequential-labelling-for-dialogue-topic-tracking" target="_blank">[poster]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Rafael E. Banchs, Haizhou Li</div>
-            <div class="book">Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (<a href="http://acl2016.org/index.php" target="_blank">ACL 2016</a>), Berlin, Aug 2016.<div style="display:inline" class="rate"> (28.0% acceptance)</div></div>
+            <div class="book">Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (<a href="http://acl2016.org/index.php" target="_blank">ACL 2016</a>), pp. 963-973, Berlin, Aug 2016.<div style="display:inline" class="rate"> (28.0% acceptance)</div></div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -740,7 +740,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2016-08-05</div>
+      <div id="footer">Last updated: 2016-09-03</div>
     </div>
   </body>
 </html>
