--- a/index.html
+++ b/index.html
@@ -243,6 +243,15 @@
             <div class="year">2016</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C39] </div>
+            <div style="display:inline" class="title">The Fifth Dialog State Tracking Challenge.</div>
+            <div class="author"><span>Seokhwan Kim</span>, Luis Fernando D'Haro, Rafael E. Banchs, Jason D. Williams, Matthew Henderson, Koichiro Yoshino</div>
+            <div class="book">To appear in Proceedings of the 2016 IEEE Spoken Language Technology Workshop  (<a href="http://www.slt2016.org/default.asp" target="_blank">SLT 2016</a>), San Juan, Dec 2016.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C38] </div>
             <div style="display:inline" class="title">Exploring Convolutional and Recurrent Neural Networks in Sequential Labelling for Dialogue Topic Tracking.<div style="display:inline" class="link"><a href="http://aclweb.org/anthology/P/P16/P16-1091.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="http://aclweb.org/anthology/P/P16/P16-1091.bib" target="_blank">[bib]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/exploring-convolutional-and-recurrent-neural-networks-in-sequential-labelling-for-dialogue-topic-tracking" target="_blank">[poster]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Rafael E. Banchs, Haizhou Li</div>
@@ -740,7 +749,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2016-09-03</div>
+      <div id="footer">Last updated: 2016-09-17</div>
     </div>
   </body>
 </html>
