--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <div style="display:inline" class="link">
               <a href="http://www.slideshare.net/seokhwankim7/natural-language-in-humanrobot-interaction" target="_blank">[slides]</a>
             </div>
-            <div class="author">Rafael E. Banchs, <span>Seokhwan Kim</span>, Luis Fernando D’Haro, Andreea I. Niculescu</div>
+            <div class="author">Rafael E. Banchs, <span>Seokhwan Kim</span>, Luis Fernando D'Haro, Andreea I. Niculescu</div>
             <div class="book">Tutorial @ The 4th International Conference on Human-Agent Interaction (<a href="http://hai-conference.net/hai2016/" target="_blank">HAI 2016</a>), 04 Oct 2016.</div>
           </div>
         </div>
