--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">ACM-SIGIR, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
+            <div class="where">ACL, ACM-SIGIR, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
@@ -256,13 +256,24 @@
         <h2>Publications</h2>
         <div class="publication clearfix">
           <div class="col-xs-1">
+            <div class="year">2017</div>
+          </div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_journal">[J5] </div>
+            <div style="display:inline" class="title">Neural sentence embedding using only in-domain sentences for out-of-domain sentence detection in dialog systems.</div>
+            <div class="author">Seonghan Ryu, <span>Seokhwan Kim</span>, Junhwi Choi, Hwanjo Yu, Gary Geunbae Lee</div>
+            <div class="book">Pattern Recognition Letters (accepted) 2017.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1">
             <div class="year">2016</div>
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C39] </div>
             <div style="display:inline" class="title">The Fifth Dialog State Tracking Challenge.</div>
             <div class="author"><span>Seokhwan Kim</span>, Luis Fernando D'Haro, Rafael E. Banchs, Jason D. Williams, Matthew Henderson, Koichiro Yoshino</div>
-            <div class="book">To appear in Proceedings of the 2016 IEEE Spoken Language Technology Workshop  (<a href="http://www.slt2016.org/default.asp" target="_blank">SLT 2016</a>), San Juan, Dec 2016.</div>
+            <div class="book">Proceedings of the 2016 IEEE Spoken Language Technology Workshop  (<a href="http://www.slt2016.org/default.asp" target="_blank">SLT 2016</a>), San Juan, Dec 2016.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -455,7 +466,7 @@
             <div style="display:inline" class="pid_journal">[J4] </div>
             <div style="display:inline" class="title">Cross-Lingual Annotation Projection for Weakly-Supervised Relation Extraction.<div style="display:inline" class="link"><a href="http://dl.acm.org/citation.cfm?id=2529994&amp;CFID=299706037&amp;CFTOKEN=54484122" target="_blank">[link]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Minwoo Jeong, Jonghoon Lee, Gary Geunbae Lee</div>
-            <div class="book">ACM Transactions on Asian Language Information Processing, 13:1 (3), Feb 2014</div>
+            <div class="book">ACM Transactions on Asian Language Information Processing, 13:1 (3), Feb 2014.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -562,7 +573,7 @@
             <div style="display:inline" class="pid_journal">[J3] </div>
             <div style="display:inline" class="title">A Local Tree Alignment Approach to Relation Extraction of Multiple Arguments.<div style="display:inline" class="link"><a href="http://www.sciencedirect.com/science/article/pii/S0306457310001032" target="_blank">[link]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Minwoo Jeong, Gary Geunbae Lee</div>
-            <div class="book">Information Processing and Management, 47:4 (593-605), Jul 2011</div>
+            <div class="book">Information Processing and Management, 47:4 (593-605), Jul 2011.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -593,7 +604,7 @@
             <div style="display:inline" class="pid_journal">[J2] </div>
             <div style="display:inline" class="title">Example-based dialog modeling for practical multi-domain dialog system.<div style="display:inline" class="link"><a href="http://www.sciencedirect.com/science/article/pii/S0167639309000107" target="_blank">[link]</a></div></div>
             <div class="author">Cheongjae Lee, Sangkeun Jung, <span>Seokhwan Kim</span>, Gary Geunbae Lee</div>
-            <div class="book">Speech Communications, 51:5 (466-484), May 2009</div>
+            <div class="book">Speech Communications, 51:5 (466-484), May 2009.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -604,7 +615,7 @@
             <div style="display:inline" class="pid_journal">[J1] </div>
             <div style="display:inline" class="title">DialogStudio: A workbench for data-driven spoken dialog system development and management.<div style="display:inline" class="link"><a href="http://www.sciencedirect.com/science/article/pii/S0167639308000538" target="_blank">[link]</a></div></div>
             <div class="author">Sangkeun Jung, Cheongjae Lee, <span>Seokhwan Kim</span>, Gary Geunbae Lee</div>
-            <div class="book">Speech Communications, 50:8-9 (683-697), , Aug-Sep 2008</div>
+            <div class="book">Speech Communications, 50:8-9 (683-697), , Aug-Sep 2008.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -765,7 +776,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2016-10-10</div>
+      <div id="footer">Last updated: 2017-01-13</div>
     </div>
   </body>
 </html>
