--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C39] </div>
-            <div style="display:inline" class="title">The Fifth Dialog State Tracking Challenge.</div>
+            <div style="display:inline" class="title">The Fifth Dialog State Tracking Challenge.<div style="display:inline" class="link"><a href="http://workshop.colips.org/dstc5/papers/0000511.pdf" target="_blank">[PDF]</a></div><div style="display:inline" class="link"><a href="http://www.slideshare.net/seokhwankim7/the-fifth-dialog-state-tracking-challenge-dstc5" target="_blank">[poster]</a></div></div>
             <div class="author"><span>Seokhwan Kim</span>, Luis Fernando D'Haro, Rafael E. Banchs, Jason D. Williams, Matthew Henderson, Koichiro Yoshino</div>
-            <div class="book">Proceedings of the 2016 IEEE Spoken Language Technology Workshop  (<a href="http://www.slt2016.org/default.asp" target="_blank">SLT 2016</a>), San Juan, Dec 2016.</div>
+            <div class="book">Proceedings of the 2016 IEEE Spoken Language Technology Workshop  (<a href="http://www.slt2016.org/default.asp" target="_blank">SLT 2016</a>), pp. 511-517, San Diego, Dec 2016.</div>
           </div>
         </div>
         <div class="publication clearfix">
@@ -776,7 +776,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2017-01-13</div>
+      <div id="footer">Last updated: 2017-01-19</div>
     </div>
   </body>
 </html>
