--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div style="display:inline" class="pid_journal">[J5] </div>
             <div style="display:inline" class="title">Neural sentence embedding using only in-domain sentences for out-of-domain sentence detection in dialog systems.<div style="display:inline" class="link"><a href="http://www.sciencedirect.com/science/article/pii/S0167865517300089" target="_blank">[link]</a></div></div>
             <div class="author">Seonghan Ryu, <span>Seokhwan Kim</span>, Junhwi Choi, Hwanjo Yu, Gary Geunbae Lee</div>
-            <div class="book">Pattern Recognition Letters () 2017.</div>
+            <div class="book">Pattern Recognition Letters, 88 (26-32), Mar 2017.</div>
           </div>
         </div>
         <div class="publication clearfix">
