--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">ACL, ACM-SIGIR, CSL, EMNLP, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, International Journal of Social Robotics, Interspeech, NAACL-HLT</div>
+            <div class="where">ACL, ACM-SIGIR, CSL, EMNLP, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
