--- a/index.html
+++ b/index.html
@@ -185,7 +185,18 @@
         <h2>Professional Experiences</h2>
         <div class="job clearfix">
           <div class="col-xs-3">
-            <div class="profession">Organizing Committee Co-chair</div>
+            <div class="profession">Organizing Committee</div>
+            <div class="year">2017</div>
+          </div>
+          <div class="col-xs-9">
+            <div class="where">
+              <a href="http://workshop.colips.org/dstc6/" target="_blank">The Fifth Dialog System Technology Challenge (DSTC6)</a>
+            </div>
+          </div>
+        </div>
+        <div class="job clearfix">
+          <div class="col-xs-3">
+            <div class="profession">Organizing Committee</div>
             <div class="year">2016</div>
           </div>
           <div class="col-xs-9">
@@ -196,7 +207,7 @@
         </div>
         <div class="job clearfix">
           <div class="col-xs-3">
-            <div class="profession">Organizing Committee Co-chair</div>
+            <div class="profession">Organizing Committee</div>
             <div class="year">2015</div>
           </div>
           <div class="col-xs-9">
@@ -776,7 +787,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2017-02-24</div>
+      <div id="footer">Last updated: 2017-05-02</div>
     </div>
   </body>
 </html>
