--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </div>
           <div class="col-xs-9">
             <div class="where">
-              <a href="http://workshop.colips.org/dstc6/" target="_blank">The Fifth Dialog System Technology Challenge (DSTC6)</a>
+              <a href="http://workshop.colips.org/dstc6/" target="_blank">The Sixth Dialog System Technology Challenge (DSTC6)</a>
             </div>
           </div>
         </div>
