--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="job clearfix">
           <div class="col-xs-3">
             <div class="profession">Research Scientist</div>
-            <div class="year">Jan 2012 -</div>
+            <div class="year">Jan 2012 - Jul 2017</div>
           </div>
           <div class="col-xs-9">
             <div class="where">
@@ -787,7 +787,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2017-05-02</div>
+      <div id="footer">Last updated: 2017-05-18</div>
     </div>
   </body>
 </html>
