--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="profession">Reviewer</div>
           </div>
           <div class="col-xs-9">
-            <div class="where">ACL, ACM-SIGIR, CSL, EMNLP, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT</div>
+            <div class="where">ACL, ACM-SIGIR, CSL, EMNLP, IEEE ASRU, IEEE ICASSP, IEEE SLT, IEEE/ACM TASLP, IJCAI, IJCNLP, IWSDS, Interspeech, NAACL-HLT</div>
           </div>
         </div>
       </div>
@@ -787,7 +787,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2017-05-18</div>
+      <div id="footer">Last updated: 2017-06-28</div>
     </div>
   </body>
 </html>
