--- a/index.html
+++ b/index.html
@@ -270,6 +270,15 @@
             <div class="year">2017</div>
           </div>
           <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C40] </div>
+            <div style="display:inline" class="title">Truly Multi-modal YouTube-8M Video Classification with Video, Audio, and Text.</div>
+            <div class="author">Zhe Wang, Kingsley Kuan, Mathieu Ravaut, Gaurav Manek, Sibo Song, Yuan Fang, <span>Seokhwan Kim</span>, Nancy F. Chen, Luis Fernando D'Haro, Anh Tuan Luu, Hongyuan Zhu, Zeng Zeng, Ngai Man Cheung, Georgios Piliouras, Jie Lin, Vijay Chandrasekhar, (Team DL2.0, ranked at 22)</div>
+            <div class="book">Proceedings of CVPR 2017 Workshop on YouTube-8M Large-Scale Video Understanding (<a href="https://research.google.com/youtube8m/workshop.html" target="_blank">CVPR 2017 YouTube-8M</a>), Honolulu, Jul 2017.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
+          <div class="col-xs-11">
             <div style="display:inline" class="pid_journal">[J5] </div>
             <div style="display:inline" class="title">Neural sentence embedding using only in-domain sentences for out-of-domain sentence detection in dialog systems.<div style="display:inline" class="link"><a href="http://www.sciencedirect.com/science/article/pii/S0167865517300089" target="_blank">[link]</a></div></div>
             <div class="author">Seonghan Ryu, <span>Seokhwan Kim</span>, Junhwi Choi, Hwanjo Yu, Gary Geunbae Lee</div>
