--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
           </div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_conference">[C40] </div>
-            <div style="display:inline" class="title">Truly Multi-modal YouTube-8M Video Classification with Video, Audio, and Text.</div>
-            <div class="author">Zhe Wang, Kingsley Kuan, Mathieu Ravaut, Gaurav Manek, Sibo Song, Yuan Fang, <span>Seokhwan Kim</span>, Nancy F. Chen, Luis Fernando D'Haro, Anh Tuan Luu, Hongyuan Zhu, Zeng Zeng, Ngai Man Cheung, Georgios Piliouras, Jie Lin, Vijay Chandrasekhar, (Team DL2.0, ranked at 22)</div>
-            <div class="book">Proceedings of CVPR 2017 Workshop on YouTube-8M Large-Scale Video Understanding (<a href="https://research.google.com/youtube8m/workshop.html" target="_blank">CVPR 2017 YouTube-8M</a>), Honolulu, Jul 2017.</div>
+            <div style="display:inline" class="title">Truly Multi-modal YouTube-8M Video Classification with Video, Audio, and Text (Team DL2.0, ranked at 22/650).</div>
+            <div class="author">Zhe Wang, Kingsley Kuan, Mathieu Ravaut, Gaurav Manek, Sibo Song, Yuan Fang, <span>Seokhwan Kim</span>, Nancy F. Chen, Luis Fernando D'Haro, Anh Tuan Luu, Hongyuan Zhu, Zeng Zeng, Ngai Man Cheung, Georgios Piliouras, Jie Lin, Vijay Chandrasekhar</div>
+            <div class="book">Proceedings of the CVPR 2017 Workshop on YouTube-8M Large-Scale Video Understanding (<a href="https://research.google.com/youtube8m/workshop.html" target="_blank">YouTube-8M</a>), Honolulu, Jul 2017.</div>
           </div>
         </div>
         <div class="publication clearfix">
