--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <div class="icon pull-left text-center">
                 <span class="fa fa-mobile fa-fw"></span>
               </div>
-              <div class="description pull-right">+65 9776 1740</div>
+              <div class="description pull-right">+1 (669) 204-2805</div>
             </div>
           </div>
         </div>
@@ -269,6 +269,15 @@
           <div class="col-xs-1">
             <div class="year">2017</div>
           </div>
+          <div class="col-xs-11">
+            <div style="display:inline" class="pid_conference">[C40] </div>
+            <div style="display:inline" class="title">Truly Multi-modal YouTube-8M Video Classification with Video, Audio, and Text (Team DL2.0, ranked at 22/650).</div>
+            <div class="author">Zhe Wang, Kingsley Kuan, Mathieu Ravaut, Gaurav Manek, Sibo Song, Yuan Fang, <span>Seokhwan Kim</span>, Nancy F. Chen, Luis Fernando D'Haro, Anh Tuan Luu, Hongyuan Zhu, Zeng Zeng, Ngai Man Cheung, Georgios Piliouras, Jie Lin, Vijay Chandrasekhar</div>
+            <div class="book">Proceedings of the CVPR 2017 Workshop on YouTube-8M Large-Scale Video Understanding (<a href="https://research.google.com/youtube8m/workshop.html" target="_blank">YouTube-8M</a>), Honolulu, Jul 2017.</div>
+          </div>
+        </div>
+        <div class="publication clearfix">
+          <div class="col-xs-1"></div>
           <div class="col-xs-11">
             <div style="display:inline" class="pid_journal">[J5] </div>
             <div style="display:inline" class="title">Neural sentence embedding using only in-domain sentences for out-of-domain sentence detection in dialog systems.<div style="display:inline" class="link"><a href="http://www.sciencedirect.com/science/article/pii/S0167865517300089" target="_blank">[link]</a></div></div>
@@ -787,7 +796,7 @@
           </div>
         </div>
       </div>
-      <div id="footer">Last updated: 2017-07-06</div>
+      <div id="footer">Last updated: 2017-07-10</div>
     </div>
   </body>
 </html>
